--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,5 @@
 = WildFly Docker Image image:https://github.com/t1/rdohna-wildfly-docker-image/actions/workflows/docker-image.yml/badge.svg[link=https://github.com/t1/rdohna-wildfly-docker-image/actions/workflows/docker-image.yml]
 
-This is for development purposes, not for production! For production use, it's probably better to use https://github.com/wildfly/wildfly-glow[WildFly Glow].
+This is only for development purposes! For production use, it's probably better to use https://github.com/wildfly/wildfly-glow[WildFly Glow].
 
 Please follow the docker-hub link on the right.
